Version 7.2.0
-------------

    * Support for 'remote' worker processes which are persisted throughout the build.
      These can be used to speed up compile times in cases where the compiler supports this
      and has significant startup overhead. Initial implementation for Java can have up to
      a 4x speedup on sufficiently large build graphs.
    * The Linux implementation will attempt to download a portable PyPy distribution if
      none of the plugins work against the system versions. Should make it easier to get
      up & running since it's not completely trivial to install.
    * Support for caches to store asynchronously, so further build actions don't have to
      wait on network latency. Retrieves must still happen synchronously, of course.
      The cache request scheme is also a little more efficient and will make slightly
	  fewer requests overall.



Version 7.1.1
-------------

    * Reverted an internal update to guava which broke some Java tests.
      In future we'll look more at compatibility here, ideally it shouldn't matter but it's
      not fully obvious what is best to do.


Version 7.1.0
-------------

    * Support for an "experimental" directory specified in plzconfig. If set it is subject
      to the following rules:
       - Targets in the experimental tree can depend on any other target, regardless
         of visibility constraints.
       - Targets outside the experimental tree can't depend on targets in it, again
         regardless of their visibility declaration.
       - Please doesn't descend into the experimental tree for commands like `plz test //...`
         so tests in there wouldn't generally be run.
    * New command, `plz gc`, which attempts to identify unused targets across the repo.
      "GC roots" are inferred from non-test binary targets, but can also be specified in .plzconfig.
    * `plz query revdeps` no longer prints the targets it was given in the first place.