@@ -322,6 +322,12 @@
     </ul>
   </p>
 
+  <h2>plz help</h2>
+
+  <p>Displays help about a particular facet of Please. It knows about built-in build rules, config
+    settings and a few other things. Mostly this is useful as an instant reference; you can run
+    <code>plz help topics</code> to get a list of all the topics that it knows about.</p>
+
   <h2>plz op</h2>
 
     <p>Re-runs whatever the previous command was.</p>
